--- a/Ong-OpenCardMaker.csproj
+++ b/Ong-OpenCardMaker.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net452</TargetFramework>
     <RootNamespace>OpenCardMaker</RootNamespace>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
@@ -12,10 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="System.Windows.Forms">
-      <HintPath>C:\Windows\Microsoft.NET\Framework\v2.0.50727\System.Windows.Forms.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
 
   <ItemGroup>
