Add manifest to use native window styles

--- a/Ong-OpenCardMaker.csproj
+++ b/Ong-OpenCardMaker.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net452</TargetFramework>
     <RootNamespace>OpenCardMaker</RootNamespace>
     <UseWPF>true</UseWPF>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
