Remove GodMode references
Well, at first, I'd like to make a Card Maker simulation UI for this. For now, I'll just make it as a normal card editor instead.

--- a/Ong-OpenCardMaker.csproj
+++ b/Ong-OpenCardMaker.csproj
@@ -18,13 +18,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Dialogs\GodMode\AddCardConfirm.xaml.cs">
+    <Compile Update="Dialogs\AddCardConfirm.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="Dialogs\GodMode\AddCardConfirm.xaml">
+    <Page Update="Dialogs\AddCardConfirm.xaml">
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
